--- a/preview/index.html
+++ b/preview/index.html
@@ -64,7 +64,7 @@
         </div>
         <div class="footer">
             @mthmulders
-            <img src="img/logo-texte-devoxx-france-400.png" />
+            <!-- <img src="img/logo-texte-devoxx-france-400.png" /> -->
         </div>
     </div>
 
