Add a section with nested sections

--- a/preview/index.html
+++ b/preview/index.html
@@ -52,6 +52,17 @@
                 <h3>Here, have some math!</h3>
                 $e=mc^2$
             </section>
+            <section id="subsection">
+                <section id="subsection-1">
+                    <h3>Subsection 1</h3>
+                </section>
+                <section id="subsection-2">
+                    <h3>Subsection 2</h3>
+                </section>
+                <section id="subsection-3">
+                    <h3>Subsection 3</h3>
+                </section>
+            </section>
             <section id="end">
                 <h3>Questions, remarks, discussions...</h3>
                 <span class="attributions">
