Lots of tweaks regarding the build process

--- a/preview/index.html
+++ b/preview/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
     <title>Personal Reveal.js preview</title>
-    <link rel="stylesheet" href="css/reveal.css">
-    <link rel="stylesheet" href="css/personal-theme.css">
+    <link rel="stylesheet" href="reveal.css">
+    <link rel="stylesheet" href="personal-theme.css">
     <link rel="stylesheet" href="lib/css/tomorrow-night-blue.css">
 
     <!-- Printing and PDF exports -->
@@ -14,7 +14,7 @@
         var link = document.createElement('link');
         link.rel = 'stylesheet';
         link.type = 'text/css';
-        link.href = window.location.search.match(/print-pdf/gi) ? 'css/print/pdf.css' : 'css/print/paper.css';
+        link.href = window.location.search.match(/print-pdf/gi) ? 'print/pdf.css' : 'print/paper.css';
         document.getElementsByTagName('head')[0].appendChild(link);
     </script>
 </head>
