Update preview slides with table

--- a/preview/index.html
+++ b/preview/index.html
@@ -52,6 +52,34 @@
                 <h3>Here, have some math!</h3>
                 $e=mc^2$
             </section>
+            <section id="table">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Column 1</th>
+                            <th>Column 2</th>
+                            <th>Column 3</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Value 1</td>
+                            <td>Value 2</td>
+                            <td>Value 3</td>
+                        </tr>
+                        <tr>
+                            <td>Value 1</td>
+                            <td>Value 2</td>
+                            <td>Value 3</td>
+                        </tr>
+                        <tr>
+                            <td>Value 1</td>
+                            <td>Value 2</td>
+                            <td>Value 3</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
             <section id="subsection">
                 <section id="subsection-1">
                     <h3>Subsection 1</h3>
