Fix preview slide deck

--- a/preview/index.html
+++ b/preview/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
-    <title>Personal Reveal.js preview</title>
+    <title>I'm Blue preview</title>
     <link rel="stylesheet" href="reveal.css">
-    <link rel="stylesheet" href="personal-theme.css">
+    <link rel="stylesheet" href="im-blue.css">
     <link rel="stylesheet" href="lib/css/tomorrow-night-blue.css">
 
     <!-- Printing and PDF exports -->
