Basic font size a bit smaller

--- a/preview/index.html
+++ b/preview/index.html
@@ -91,6 +91,10 @@
                     <h3>Subsection 3</h3>
                 </section>
             </section>
+            <section id="text">
+                Oh, here's some text as well.
+                I figured it might be nice to see a little bigger body of text.
+            </section>
             <section id="end">
                 <h3>Questions, remarks, discussions...</h3>
                 <span class="attributions">
