Ensure images, video's and iframes never have a border around them

--- a/preview/index.html
+++ b/preview/index.html
@@ -95,6 +95,10 @@
                 Oh, here's some text as well.
                 I figured it might be nice to see a little bigger body of text.
             </section>
+            <section id="image">
+                Plus, we need kittens. Obviously.
+                <img src="img/640px-Kitten_5.jpg" />
+            </section>
             <section id="end">
                 <h3>Questions, remarks, discussions...</h3>
                 <span class="attributions">
