Preview image is not part of distribution

--- a/preview/index.html
+++ b/preview/index.html
@@ -97,7 +97,7 @@
             </section>
             <section id="image">
                 Plus, we need kittens. Obviously.
-                <img src="img/640px-Kitten_5.jpg" />
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d2/Kitten_5.jpg/640px-Kitten_5.jpg" />
             </section>
             <section id="end">
                 <h3>Questions, remarks, discussions...</h3>
