Highlight strong and em text with different color

--- a/preview/index.html
+++ b/preview/index.html
@@ -83,6 +83,8 @@
             <section id="subsection">
                 <section id="subsection-1">
                     <h3>Subsection 1</h3>
+                    <div>This requires <strong>some</strong> attention!</div>
+                    <div>This requires <em>some more</em> attention!</div>
                 </section>
                 <section id="subsection-2">
                     <h3>Subsection 2</h3>
