Links should have the same color as other accented elements

--- a/preview/index.html
+++ b/preview/index.html
@@ -88,6 +88,7 @@
                 </section>
                 <section id="subsection-2">
                     <h3>Subsection 2</h3>
+                    <div>This section has <a href="https://maarten.mulders.it">a link</a> in it!</div>
                 </section>
                 <section id="subsection-3">
                     <h3>Subsection 3</h3>
