Drop background image; use darker colors

--- a/preview/index.html
+++ b/preview/index.html
@@ -107,14 +107,14 @@
                 <span class="attributions">
                     <h4>Image attributions</h4>
                     <ul>
-                        <li>Background image: <a href="https://unsplash.com/@samuelzeller/" target="_blank">Samuel Zeller</a> on <a href="https://unsplash.com/" target="_blank">Unsplash</a>, adapted using <a href="https://duotone.shapefactory.co/" target="_blank">Duotone</a>.</li>
+                        <li>(none)</li>
                     </ul>
                 </span>
             </section>
         </div>
         <div class="footer">
-            @mthmulders
-            <span class="conf-logo">Conference logo goes here</span>
+            <span class="conference">Conference logo goes here</span>
+            <span class="speaker">@mthmulders</span>
         </div>
     </div>
 
